[project]
name = "projet-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.5",
    "langgraph>=1.2.5",
    "pytest>=9.1.0",
]
